# browser-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PRIVACY.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: analyze.py  run.py  tasks.jsonl
benchmarks/results/: 20260619_160154_dom.csv  20260620_114621_dom.csv  20260620_145721_dom.csv
extension/: background.js  manifest.json
extension/native_host/: com.browseragent.json.template  install.sh  native_host.py
extension/sidepanel/: sidepanel.css  sidepanel.html  sidepanel.js
scripts/: make_icons.py
src/browser_agent/: __init__.py  config.py  main.py
src/browser_agent/agent/: __init__.py  loop.py  safe_message_manager.py  step.py
src/browser_agent/models/: __init__.py  base.py  discovery.py  kimi.py  openai_compat.py  registry.py  token_counter.py
src/browser_agent/perception/: __init__.py  vision_router.py
src/browser_agent/safety/: __init__.py  classifier.py  gate.py  injection.py  layer.py  policy.py  types.py
src/browser_agent/tools/: __init__.py  actions.py
src/browser_agent/ui/: __init__.py  server.py
tests/: conftest.py  test_adapter.py  test_agent_step.py  test_benchmark.py  test_benchmark_harness.py  test_classifier.py  test_config_overrides.py  test_discovery.py  test_hello_world.py  test_injection.py  test_interaction_llm.py  test_interaction_tools.py  test_native_host.py  test_safe_message_manager.py  test_safety_gate.py  test_ui_endpoints.py  test_vision_nudge.py  test_vision_router.py
tests/fixtures/: destructive.html  injection.html  search.html
(+1 files in other folders)
