[project]
name = "browser-agent"
version = "0.1.0"
description = "Self-hosted browser automation agent powered by open-weight LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.13.1",
    "playwright>=1.60.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
    "keyring>=25.0.0",
]

[project.scripts]
browser-agent = "browser_agent:main"
browser-agent-ui = "browser_agent.ui.server:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pyright]
typeCheckingMode = "basic"
include = ["src"]
exclude = ["tests", "benchmarks", "scripts", "extension"]
pythonVersion = "3.11"
# Resolve imports against the uv-managed venv. Without this, pyright can't see
# browser_use / pydantic / fastapi and reports spurious missing-import errors.
venvPath = "."
venv = ".venv"
